<resources>
    <string name="app_name">PantallaClases</string>
    <string name="fotos">Fotos</string>
    <string name="button">Button</string>
    <string name="Mago">Mago</string>
    <string name="guerrero">Guerrero</string>
    <string name="ladr_n">Ladrón</string>
    <string name="berserker">Berserker</string>
    <string name="aceptar">Aceptar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="foto_clase">Foto_Clase</string>
    <string name="fotoraza">FotoRaza</string>
    <string name="goblin">Goblin</string>
    <string name="humano">Humano</string>
    <string name="enano">Enano</string>
    <string name="elfo">Elfo</string>
    <string name="imagenraza">ImagenRaza</string>
    <string name="introduce_un_nombre">Introduce un nombre</string>
    <string name="clase">Clase</string>
    <string name="raza">Raza</string>
    <string name="_0">0</string>
    <string name="defensa">Defensa :</string>
    <string name="mochila">Mochila :</string>
    <string name="monedero">Monedero :</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="guion">-</string>
    <string name="vida">Vida :</string>
    <string name="volver_a_empezar">Volver a empezar</string>
    <string name="comenzar_aventura">Comenzar Aventura</string>
    <string name="paisaje">Paisaje</string>
    <string name="dadorandom">DadoRandom</string>
    <string name="GameDescription">Comienza la aventura, pulsa el DADO para avanzar. CUIDADO puedes encontrarte enemigos</string>
    <string name="continuar">Continuar</string>
    <string name="recoger">Recoger</string>
    <string name="objeto">Objeto</string>
    <string name="entrar">Entrar</string>
    <string name="comerciar">Comerciar</string>
    <string name="huir">Huir</string>
    <string name="luchar">Luchar</string>
    <string name="recogido">RECOGIDO</string>
    <string name="vender">Vender</string>
    <string name="comprar">Comprar</string>
    <string name="cancelar">Cancelar</string>
    <string name="has_nperdido">HAS\nPERDIDO</string>
    <string name="atacar">Atacar</string>
    <string name="enemigo">Enemigo</string>
    <string name="vidaTitle">Vida :</string>
    <string name="tu_vida_title">Tu vida :</string>
    <string name="fallaste">¡Fallaste!</string>
    <string name="foto_del_enemigo">Foto del enemigo</string>
</resources>