<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImagenClase"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/fotoraza"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:srcCompat="@mipmap/berserker" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="320dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="260dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />

    <Button
        android:id="@+id/buttonMago"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="32dp"
        android:text="@string/Mago"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonThief"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline14" />

    <Button
        android:id="@+id/buttonThief"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ladr_n"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAceptar"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/buttonMago" />

    <Button
        android:id="@+id/buttonGuerrero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="32dp"
        android:text="@string/guerrero"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBerserker"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/ImagenClase" />

    <Button
        android:id="@+id/buttonBerserker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/berserker"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAceptar"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/buttonGuerrero" />

    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>