<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MercaderActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="204dp"
        android:layout_height="350dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="104dp"
        android:contentDescription="@string/objeto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mercader" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="245dp"
        android:autoSizeTextType="none"
        android:paddingHorizontal="2dp"
        android:paddingVertical="10dp"
        android:text="@string/continuar"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="244dp"
        android:text="@string/comerciar"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
</androidx.constraintlayout.widget.ConstraintLayout>